# routes/movie.js
@@ -1,80 +1,80 @@
 const router = require("express").Router();
-const product = require("../models/product");
+const movie = require("../models/movie");
 
-//create product - post
+//create movie - post
 router.post("/", (req, res) => {
 
     const data = req.body;
-    product.insertMany(data)
+    movie.insertMany(data)
         .then(data => { res.status(201).send(data); })
         .catch(err => { res.status(500).send({ message: err.message }); });
 });
 
 router.get("/", (req, res) => {
-    //advanced query by name
-    const name = req.query.name;
+    //advanced query by title
+    const title = req.query.title;
  
-    var condition = name ? { name: { $regex: new RegExp(name), $options: "i" } } : {};
-    product.find(condition)
+    var condition = title ? { title: { $regex: new RegExp(title), $options: "i" } } : {};
+    movie.find(condition)
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send({ message: err.message }); });
 });
 
-//read all products --get
+//read all movies --get
 router.get("/", (req, res) => {
-    product.find()
+    movie.find()
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send( { message: err.message }); })
 });
 
-//read all products in stock --get
+//read all movies in stock --get
 router.get("/instock", (req, res) => {
-    product.find({ inStock: true })
+    movie.find({ inStock: true })
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send({ message: err }); })
 });
 
-//read specific product --get
+//read specific movie --get
 router.get("/:id", (req, res) => {
 
-    product.findById(req.params.id)
+    movie.findById(req.params.id)
         .then(data => { res.send(data); })
         .catch(err => { res.status(500).send({ message: err.message }); });
 });
 
-// Update Product
+// Update Movie
 router.put("/:id", (req, res) => {
     //router.put("/:id", (req, res) => {
         const id = req.params.id;
     
-        product.findByIdAndUpdate(id, req.body)
+        movie.findByIdAndUpdate(id, req.body)
             .then(data => {
                 if (!data)
-                    res.status(404).send({ message: "Cannot update product with id=" + id + ". Maybe product was not found!" });
+                    res.status(404).send({ message: "Cannot update movie with id=" + id + ". Maybemoviewas not found!" });
                 else
-                    res.send({ message: "Product was updated successfully." });
+                    res.send({ message: "movie was updated successfully." });
             })
             .catch(err => {
-                res.status(500).send({ message: "Error updating Product with id=" + id });
+                res.status(500).send({ message: "Error updating movie with id=" + id });
             });
     
     });
 
-//delete specific product --delete
+//delete specific movie --delete
 router.delete("/:id", (req, res) => {
     const id = req.params.id;
 
-    product.findByIdAndDelete(id)
+    movie.findByIdAndDelete(id)
     .then(data => {
         if (!data)
         {
-            res.status(404).send({ message: "Cannot delete product with id=" + id +".Maybe product is not found!"})
+            res.status(404).send({ message: "Cannot delete movie with id=" + id +".Maybe movie is not found!"})
         }
         else {
-            res.send({ message: "Product was successfully deleted"})
+            res.send({ message: "Movie was successfully deleted"})
         }
     })
-    .catch(err => { res.status(500).send( { message: "Error deleting product with id=" + id }); }) 
+    .catch(err => { res.status(500).send( { message: "Error deleting movie with id=" + id }); }) 
 })
 
 module.exports = router;
